deploy/manifests/istio/istio-egress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-egress
  labels:
    istio-injection: enabled
