deploy/manifests/istio/istio-egress/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  # same name as gateway deployment service for convinience
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: tls
        protocol: TLS
      hosts:
        - "*"
      tls:
        mode: PASSTHROUGH
